Report Top service used

--- a/HotelManagement/HotelManagement/Views/Report/TopServiceView.xaml
+++ b/HotelManagement/HotelManagement/Views/Report/TopServiceView.xaml
@@ -3,14 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:local="clr-namespace:HotelManagement.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:res="clr-namespace:HotelManagement.Resources"
              xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
              mc:Ignorable="d" FontSize="16"
-             d:DesignHeight="500" d:DesignWidth="600">
+             d:DesignHeight="500" d:DesignWidth="800">
     <UserControl.DataContext>
         <viewModels:TopServiceViewModel/>
     </UserControl.DataContext>
+    <UserControl.Resources>
+        <res:IndexConverter x:Key="IndexConverter"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -20,39 +25,151 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <!-- Header -->
             <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="auto"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="Top services" FontSize="24" FontWeight="Bold" VerticalAlignment="Center"
+                <TextBlock Grid.Column="0" Text="Top services used" FontSize="22" FontWeight="Bold" VerticalAlignment="Center"
                     HorizontalAlignment="Stretch" Margin="8 8 0 8" Foreground="{StaticResource PrimaryHueDarkBrush}"/>
-                <Border Grid.Column="1" BorderBrush="{StaticResource PrimaryHueDarkBrush}" BorderThickness="0.3" Margin="15 10 5 10" MaxWidth="600" HorizontalAlignment="Stretch" CornerRadius="3">
-                    <Grid>
-                        <Grid.Resources>
-                            <SolidColorBrush x:Key="PrimaryHueMidBrush" Color="Transparent"/>
-                        </Grid.Resources>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width=".4*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0" Width="Auto" Height="Auto" Name="btSearchAcc" Padding="0"
-                            Style="{StaticResource MaterialDesignFlatButton}" Foreground="Black">
-                            <TextBlock Text="By" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        </Button>
-                        <ComboBox Grid.Column="1" x:Name="cbbSearch" BorderThickness="0.2" Padding="8 2 2 2"
-                            BorderBrush="{StaticResource PrimaryHueDarkBrush}" 
-                            ItemsSource="{Binding ReportTypes}" SelectedItem="{Binding SelectedType}"
-                            Style="{StaticResource MaterialDesignOutlinedComboBox}" 
-                            VerticalContentAlignment="Center" Width="auto" >
+                <Grid Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="0.1*"/>
+                        <ColumnDefinition Width="0.3*"/>
+                        <ColumnDefinition Width="0.6*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
+                        <TextBlock Text="Top:" Margin="4" VerticalAlignment="Center"/>
+                        <ComboBox x:Name="cbbTop" Padding="8 2 2 2"
+                            BorderBrush="{StaticResource PrimaryHueDarkBrush}" Height="auto"
+                            ItemsSource="{Binding Tops}" SelectedItem="{Binding SelectedTop}"
+                            VerticalContentAlignment="Center" Width="60">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="SelectionChanged">
+                                    <i:InvokeCommandAction Command="{Binding ReloadCommand}" 
+                                   CommandParameter="{Binding ElementName=cbbTop}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
                         </ComboBox>
-                    </Grid>
-                </Border>
+                    </StackPanel>
+                    <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center">
+                        <TextBlock Text="Time report:" Margin="4" VerticalAlignment="Center"/>
+                        <DatePicker Name="dpTimeReport" Width="auto" Margin="2 0 0 0"
+                            res:DatePickerCalendar.IsMonthYear="True"
+                            res:DatePickerDateFormat.DateFormat="MM/yyyy"
+                            SelectedDate="{Binding TimeReport}">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="SelectedDateChanged">
+                                    <i:InvokeCommandAction Command="{Binding ReloadCommand}" 
+                                   CommandParameter="{Binding ElementName=dpTimeReport}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </DatePicker>
+                    </StackPanel>
+                </Grid>
             </Grid>
-            
+            <!-- Filter -->
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0" Orientation="Horizontal">
+                    <RadioButton x:Name="rdbtMonth" BorderBrush="{StaticResource PrimaryHueDarkBrush}"
+                        Style="{StaticResource MaterialDesignTabRadioButton}"
+                        Margin="4" Command="{Binding MonthCommand}"
+                        IsChecked="True">
+                        <TextBlock Text="MONTH"/>
+                    </RadioButton>
+                    <RadioButton x:Name="rdbtYear" BorderBrush="{StaticResource PrimaryHueDarkBrush}"
+                        Style="{StaticResource MaterialDesignTabRadioButton}"
+                        Margin="4" Command="{Binding YearCommand}">
+                        <TextBlock Text="YEAR"/>
+                    </RadioButton>
+                </StackPanel>
+                <Button Grid.Column="1" Width="Auto" Height="Auto" Margin="6"
+                    Style="{StaticResource MaterialDesignRaisedButton}" 
+                    Content="{materialDesign:PackIcon Kind=Reload, Size=19}" 
+                    Foreground="White" Name="btReload"
+                    Command="{Binding ReloadCommand}">
+                </Button>
+            </Grid>
+            <Separator Grid.Row="2" Background="{StaticResource MaterialDesignDarkSeparatorBackground}" Margin="4 0 4 0"/>
+            <Border Grid.Row="3" BorderBrush="Silver" BorderThickness="0.7" CornerRadius="0 0 12 12" >
+                <ListView x:Name="lvServices" ItemsSource="{Binding Services}">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem" BasedOn="{StaticResource MaterialDesignGridViewItem}">
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                            <Setter Property="VerticalContentAlignment" Value="Center"/>
+                            <Setter Property="FontSize" Value="14"/>
+                            <Setter Property="Padding" Value="0"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn DisplayMemberBinding="{Binding RelativeSource={RelativeSource FindAncestor, 
+                                AncestorType={x:Type ListViewItem}}, Converter={StaticResource IndexConverter}}">
+                                <GridViewColumn.Header>
+                                    <TextBlock Text="No." Foreground="Black" FontSize="14" FontWeight="SemiBold" Margin="12 0 0 0"/>
+                                </GridViewColumn.Header>
+                            </GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding Id}">
+                                <GridViewColumn.Header>
+                                    <TextBlock Text="ID" Foreground="Black" FontSize="14" FontWeight="SemiBold" Margin="12 0 0 0"/>
+                                </GridViewColumn.Header>
+                            </GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding Name}">
+                                <GridViewColumn.Header>
+                                    <TextBlock Text="Service Name" Foreground="Black" FontSize="14" FontWeight="SemiBold" Margin="12 0 0 0"/>
+                                </GridViewColumn.Header>
+                            </GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding Price}">
+                                <GridViewColumn.Header>
+                                    <TextBlock Text="Price" Foreground="Black" FontSize="14" FontWeight="SemiBold" Margin="12 0 0 0"/>
+                                </GridViewColumn.Header>
+                            </GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding Amount}">
+                                <GridViewColumn.Header>
+                                    <TextBlock Text="Amount" Foreground="Black" FontSize="14" FontWeight="SemiBold" Margin="12 0 0 0"/>
+                                </GridViewColumn.Header>
+                            </GridViewColumn>
+                            <GridView.ColumnHeaderContainerStyle>
+                                <Style TargetType="GridViewColumnHeader">
+                                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                                    <Setter Property="FontWeight" Value="Bold"/>
+                                    <Setter Property="Foreground" Value="Black"/>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="GridViewColumnHeader">
+                                                <Grid>
+                                                    <Border Name="HeaderBorder"
+                                                        BorderThickness="0"
+                                                        BorderBrush="#F44336"
+                                                        Padding="2,0,2,0">
+                                                        <ContentPresenter Name="HeaderContent"
+                                                            TextElement.Foreground="#2F2F2F"
+                                                            TextElement.FontSize="14"
+                                                            Margin="10,10,8,10"
+                                                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                            RecognizesAccessKey="True"
+                                                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
+                                                            OpacityMask="Black"/>
+                                                    </Border>
+                                                </Grid>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </GridView.ColumnHeaderContainerStyle>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </Border>
         </Grid>
     </Grid>
 </UserControl>
