--- a/HotelManagement/HotelManagement/Views/Invoice/InvoiceView.xaml
+++ b/HotelManagement/HotelManagement/Views/Invoice/InvoiceView.xaml
@@ -245,6 +245,35 @@
                                             <TextBlock Text="Guest" Foreground="Black" FontSize="14" FontWeight="SemiBold" Margin="8 0 0 0"/>
                                         </GridViewColumn.Header>
                                     </GridViewColumn>
+                                    <GridView.ColumnHeaderContainerStyle>
+                                        <Style TargetType="GridViewColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                                            <Setter Property="FontWeight" Value="Bold"/>
+                                            <Setter Property="Foreground" Value="Black"/>
+                                            <Setter Property="Template">
+                                                <Setter.Value>
+                                                    <ControlTemplate TargetType="GridViewColumnHeader">
+                                                        <Grid>
+                                                            <Border Name="HeaderBorder"
+                                                        BorderThickness="0"
+                                                        BorderBrush="#F44336"
+                                                        Padding="2,0,2,0">
+                                                                <ContentPresenter Name="HeaderContent"
+                                                            TextElement.Foreground="#2F2F2F"
+                                                            TextElement.FontSize="14"
+                                                            Margin="10,10,8,10"
+                                                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                            RecognizesAccessKey="True"
+                                                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
+                                                            OpacityMask="Black"/>
+                                                            </Border>
+                                                        </Grid>
+                                                    </ControlTemplate>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </Style>
+                                    </GridView.ColumnHeaderContainerStyle>
                                 </GridView>
                             </ListView.View>
                             <i:Interaction.Triggers>
