fix + report visitors

--- a/HotelManagement/HotelManagement/Views/AddTypeWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/AddTypeWindow.xaml
@@ -61,6 +61,7 @@
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
+                <RowDefinition/>
                 <RowDefinition Height="70"/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
@@ -137,7 +138,13 @@
                     Height="25"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
-                    Margin="0 0 60 0"/>
+                    Margin="0 0 60 0">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="PreviewTextInput">
+                            <ei:CallMethodAction TargetObject="{Binding}" MethodName="NumberValidationTextBox"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </TextBox>
             </Grid>
             <Grid Grid.Row="4">
                 <TextBlock 
@@ -157,6 +164,13 @@
                     Margin="0 0 60 0"
                     IsEnabled="False"/>
             </Grid>
+            <TextBlock Grid.Row="5"
+                       x:Name="txbError"
+                       Foreground="Red"
+                       Text="Please fill out all the fields"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Visibility="Hidden"/>
             <Grid Grid.Row="6">
                 <Button
                     x:Name="btnSave"
