--- a/HotelManagement/HotelManagement/Views/AddRoomWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/AddRoomWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HotelManagement.Views" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
+        xmlns:local="clr-namespace:HotelManagement.Views" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewModels="clr-namespace:HotelManagement.ViewModels" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
         mc:Ignorable="d"
         Title="AddRoomView" 
         Height="450" 
@@ -63,6 +63,7 @@
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
+                <RowDefinition/>
                 <RowDefinition Height="70"/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
@@ -98,7 +99,8 @@
                     Height="25"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
-                    Margin="0 0 60 0"/>
+                    Margin="0 0 60 0">
+                </ComboBox>
             </Grid>
             <Grid Grid.Row="2">
                 <Button
@@ -140,7 +142,8 @@
                     Height="25"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
-                    Margin="0 0 60 0"/>
+                    Margin="0 0 60 0">
+                </TextBox>
             </Grid>
             <Grid Grid.Row="4">
                 <TextBlock 
@@ -177,7 +180,14 @@
                     VerticalAlignment="Center"
                     Margin="0 0 60 0"/>
             </Grid>
-            <Grid Grid.Row="6">
+            <TextBlock Grid.Row="6"
+                       x:Name="txbError"
+                       Foreground="Red"
+                       Text="Type or Name is null"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Visibility="Hidden"/>
+            <Grid Grid.Row="7">
                 <Button
                     x:Name="btnSave"
                     Background="{x:Null}"
