--- a/HotelManagement/HotelManagement/Views/CalendarView.xaml
+++ b/HotelManagement/HotelManagement/Views/CalendarView.xaml
@@ -98,7 +98,7 @@
                 Height="20"
                 HorizontalAlignment="Right"
                 materialDesign:ShadowAssist.ShadowDepth="Depth3"
-                Background="#B2DFE5"/>
+                Background="#2196F3"/>
             <TextBlock 
                 Text="Due Out"
                 Grid.Column="1"
@@ -110,7 +110,7 @@
                 Height="20"
                 HorizontalAlignment="Right"
                 materialDesign:ShadowAssist.ShadowDepth="Depth3"
-                Background="#C5B2E5"/>
+                Background="#AB47BC"/>
             <TextBlock 
                 Text="Occupied"
                 Grid.Column="3"
@@ -122,7 +122,7 @@
                 Height="20"
                 HorizontalAlignment="Right"
                 materialDesign:ShadowAssist.ShadowDepth="Depth3"
-                Background="#E5B2B2"/>
+                Background="#FF3D00"/>
             <TextBlock 
                 Text="No Show"
                 Grid.Column="5"
@@ -146,7 +146,7 @@
                 Height="20"
                 HorizontalAlignment="Right"
                 materialDesign:ShadowAssist.ShadowDepth="Depth3"
-                Background="#B8E5B2"/>
+                Background="#7CB342"/>
             <TextBlock 
                 Text="Reserved"
                 Grid.Column="9"
