--- a/HotelManagement/HotelManagement/Views/GuestsView.xaml
+++ b/HotelManagement/HotelManagement/Views/GuestsView.xaml
@@ -19,10 +19,10 @@
             DialogTheme="Inherit" IsOpen="{Binding IsOpenDialog}">
             <materialDesign:DialogHost.DialogContent>
                 <Grid Background="White">
-                    <Grid Height="600" Width="400" Margin="10">
+                    <Grid Height="680" Width="400" Margin="10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="40"/>
-                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="10"/>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
@@ -34,41 +34,49 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Row="0" Text="{Binding Title}" Margin="8" FontSize="20" FontWeight="Bold" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="1" Margin="8 4 4 12"/>
-                        <TextBox Grid.Row="2" Margin="4"
+                        <TextBlock Grid.Row="1"/>
+                        <TextBox Grid.Row="2" Margin="5 15"
                                 Style="{StaticResource MaterialDesignOutlinedTextBox}"
                                 VerticalAlignment="Top" 
                                  IsReadOnly="{Binding IsReadOnly}"
-                                AcceptsReturn="True" Text="{Binding GuestID}"
-                                materialDesign:HintAssist.Hint="Guest's IDcard"/>
-                        <TextBox Grid.Row="3" Margin="4"
+                                AcceptsReturn="True" 
+                                 Text="{Binding Path=GuestID, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
+                                materialDesign:HintAssist.Hint="Guest's IDcard">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="PreviewTextInput">
+                                    <ei:CallMethodAction TargetObject="{Binding}" MethodName="NumberValidationTextBox"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </TextBox>
+                        <TextBox Grid.Row="3" Margin="5 15"
                             Style="{StaticResource MaterialDesignOutlinedTextBox}"
                             VerticalAlignment="Top" 
-                            AcceptsReturn="True" Text="{Binding GuestName}"
+                            AcceptsReturn="True" 
+                                Text="{Binding Path=GuestName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                             materialDesign:HintAssist.Hint="Guest's name"/>
 
-                        <ComboBox Grid.Row="4" Margin="4"
+                        <ComboBox Grid.Row="4" Margin="5 15"
                             Style="{StaticResource MaterialDesignOutlinedComboBox}"
                             VerticalAlignment="Top" 
-                            Text="{Binding GuestGender}"
+                            Text="{Binding Path=GuestGender, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                             materialDesign:HintAssist.Hint="Guest's gender">
                             <ComboBoxItem>Male</ComboBoxItem>
                             <ComboBoxItem>Female</ComboBoxItem>
                         </ComboBox>
 
-                        <DatePicker Grid.Row="5" Margin="4"
+                        <DatePicker Grid.Row="5" Margin="5 15"
                             Style="{StaticResource MaterialDesignOutlinedDatePicker}"
                             VerticalAlignment="Top" 
-                            Text="{Binding GuestBirthday}"
+                            Text="{Binding Path=GuestBirthday, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                             materialDesign:HintAssist.Hint="Guest's birthday"/>
-                        
-                        <TextBox Grid.Row="6" Margin="4"
+
+                        <TextBox Grid.Row="6" Margin="5 15"
                             Style="{StaticResource MaterialDesignOutlinedTextBox}"
                             VerticalAlignment="Top" 
                             AcceptsReturn="True" Text="{Binding GuestAddress}"
                             materialDesign:HintAssist.Hint="Guest's address"/>
 
-                        <TextBox Grid.Row="7" Margin="4"
+                        <TextBox Grid.Row="7" Margin="5 15"
                             Style="{StaticResource MaterialDesignOutlinedTextBox}"
                             VerticalAlignment="Top" 
                             AcceptsReturn="True" Text="{Binding GuestPhone}"
@@ -80,10 +88,11 @@
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
                         </TextBox>
-                        <TextBox Grid.Row="8" Margin="4"
+                        <TextBox Grid.Row="8" Margin="5 15"
                             Style="{StaticResource MaterialDesignOutlinedTextBox}"
                             VerticalAlignment="Top" 
-                            AcceptsReturn="True" Text="{Binding GuestEmail}"
+                            AcceptsReturn="True" 
+                                 Text="{Binding Path=GuestEmail, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                             materialDesign:HintAssist.Hint="Guest's email"/>
 
                         <TextBlock Grid.Row="9" Text="{Binding ErrorMessage}" Margin="0 0 0 4" HorizontalAlignment="Center" FontSize="14" Foreground="Red"/>
@@ -162,7 +171,7 @@
                         </Border>
                     </Grid>
                     <Grid Grid.Column="1">
-                        <Button Width="50" Height="30" Margin="35 40 60 0"
+                        <Button Width="50" Height="30" Margin="35 0 40 0"
                             Style="{StaticResource MaterialDesignRaisedButton}" 
                             Content="{materialDesign:PackIcon Kind=Reload, Size=15}" 
                                 VerticalContentAlignment="Center"
@@ -177,7 +186,7 @@
                             Background="{StaticResource PrimaryHueDarkBrush}"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Right"
-                            Margin="35 0 35 30"
+                            Margin="35 0 100 0"
                             Width="100"
                             Height="30"
                             Style="{StaticResource MaterialDesignRaisedButton}"
