--- a/HotelManagement/HotelManagement/Resources/UC/UC_GuestChart.xaml
+++ b/HotelManagement/HotelManagement/Resources/UC/UC_GuestChart.xaml
@@ -24,43 +24,69 @@
             <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Text="Choose Year" FontSize="16" 
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Center"
-                       Margin="20 0 0 0"
-                       Foreground="{StaticResource PrimaryHueDarkBrush}"/>
-            <ListBox Grid.Row="1" x:Name="lbGuestChart" 
-                     Margin="20 0 20 0"
-                     Style="{StaticResource MaterialDesignFilterChipListBox}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Margin="0,2">
-                            <TextBlock x:Name="txbTitle" Text="{Binding Title}" />
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="0.2*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0"
+                  x:Name="grdYears">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Text="Choose Year" FontSize="16" 
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Center"
+                           Margin="20 0 0 0"
+                           Foreground="{StaticResource PrimaryHueDarkBrush}"/>
+                <ListBox Grid.Row="1" x:Name="lbGuestChart" 
+                         Margin="20 0 20 0"
+                         Style="{StaticResource MaterialDesignFilterChipListBox}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Margin="0,2">
+                                <TextBlock x:Name="txbTitle" Text="{Binding Title}" />
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectionChanged">
+                            <i:InvokeCommandAction Command="{Binding ChooseItemCommand}"
+                                 CommandParameter="{Binding ElementName=lbGuestChart}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </ListBox>
+            </Grid>
+            <ComboBox Grid.Column="1"
+                      x:Name="cbbChangeType"
+                      HorizontalAlignment="Center"
+                      VerticalAlignment="Center"
+                      Width="auto"
+                      SelectedIndex="0"
+                      Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                      Foreground="{StaticResource PrimaryHueDarkBrush}"
+                      BorderBrush="{StaticResource PrimaryHueDarkBrush}">
+                <ComboBoxItem>Month</ComboBoxItem>
+                <ComboBoxItem>Year</ComboBoxItem>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="SelectionChanged">
-                        <i:InvokeCommandAction Command="{Binding ChooseItemCommand}"
-                             CommandParameter="{Binding ElementName=lbGuestChart}" />
+                        <i:InvokeCommandAction Command="{Binding ChangeTypeCommand}"
+                                 CommandParameter="{Binding ElementName=Report}" />
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
-            </ListBox>
+            </ComboBox>
         </Grid>
-        <lvc:CartesianChart Grid.Row="1" Margin="10" Series="{Binding SeriesCollection}" LegendLocation="Right" >
+        <lvc:CartesianChart Grid.Row="1" x:Name="lvc" Margin="10" Series="{Binding SeriesCollection}" LegendLocation="Right" >
             <lvc:CartesianChart.AxisY>
                 <lvc:Axis Title="Quantity" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
             </lvc:CartesianChart.AxisY>
             <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
+                <lvc:Axis x:Name="titleX" Title="Month" Labels="{Binding Labels}"></lvc:Axis>
             </lvc:CartesianChart.AxisX>
         </lvc:CartesianChart>
         <TextBlock Grid.Row="2" 
-                   Text="Chart of Visitors by Year"
+                   x:Name="txtNameChart"
+                   Text="Chart of Visitors by Month"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    FontSize="16"
