--- a/HotelManagement/HotelManagement/Resources/MenuItem.xaml
+++ b/HotelManagement/HotelManagement/Resources/MenuItem.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:views="clr-namespace:HotelManagement.Views"
                     xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
+                    xmlns:viewModelSerive="clr-namespace:HotelManagement.ViewModels.Service"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
     <DataTemplate DataType="{x:Type viewModels:DashBoardViewModel}">
         <views:DashBoardView/>
@@ -27,7 +28,7 @@
     <DataTemplate DataType="{x:Type viewModels:AccountViewModel}">
         <views:AccountsView/>
     </DataTemplate>
-    <DataTemplate DataType="{x:Type viewModels:ServicesViewModel}">
+    <DataTemplate DataType="{x:Type viewModelSerive:ServicesViewModel}">
         <views:ServicesView/>
     </DataTemplate>
 </ResourceDictionary>
