--- a/HotelManagement/HotelManagement/Views/ServicesView.xaml
+++ b/HotelManagement/HotelManagement/Views/ServicesView.xaml
@@ -5,11 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HotelManagement.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
+             xmlns:viewModels="clr-namespace:HotelManagement.ViewModels.Service"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignHeight="450" d:DesignWidth="1100"
              x:Name="servicesView">
     <UserControl.DataContext>
         <viewModels:ServicesViewModel/>
@@ -110,6 +110,7 @@
                     </Grid>
                     <Grid Grid.Column="1">
                         <Button
+                            x:Name="btnAddService"
                             Background="#637BCF"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Right"
