--- a/HotelManagement/HotelManagement/Resources/UC/UC_GuestChart.xaml
+++ b/HotelManagement/HotelManagement/Resources/UC/UC_GuestChart.xaml
@@ -8,7 +8,7 @@
              x:Name="Report"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
-        <viewModels:ReportsViewModel/>
+        <viewModels:GuestChart/>
     </UserControl.DataContext>
     <Grid>
         <i:Interaction.Triggers>
