--- a/HotelManagement/HotelManagement/Views/Reservation/NewReservationWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/Reservation/NewReservationWindow.xaml
@@ -65,19 +65,37 @@
                                     Margin="0,0,32,0" VerticalAlignment="Center"
                                     Text="ID No." FontSize="16"/>
 
-                                <TextBox
-                                    Grid.Row="0" Grid.Column="1"
-                                    FontSize="14" Width="230" Margin="0,3,0,3"
-                                    Text="{Binding Path=GuestInformation.ID}"
-                                    Style="{StaticResource MaterialDesignTextBox}"
-                                    materialDesign:TextFieldAssist.HasClearButton="True"
-                                    materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueMidBrush}">
-                                    <i:Interaction.Triggers>
-                                        <i:EventTrigger EventName="PreviewTextInput">
-                                            <ei:CallMethodAction TargetObject="{Binding}" MethodName="NumberValidationTextBox"/>
-                                        </i:EventTrigger>
-                                    </i:Interaction.Triggers>
-                                </TextBox>
+                                <StackPanel Grid.Row="0" Grid.Column="1">
+                                    <TextBox 
+                                        x:Name="autoTextBox"
+                                        FontSize="14" Width="230" Margin="0,3,0,3"
+                                        Text="{Binding Path=GuestInformation.ID}"
+                                        MaxLength="10"
+                                        materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
+                                        Style="{StaticResource MaterialDesignTextBox}"
+                                        materialDesign:TextFieldAssist.HasClearButton="True"
+                                        materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueMidBrush}"
+                                        TextChanged="TextBox_TextChanged">
+                                        <i:Interaction.Triggers>
+                                            <i:EventTrigger EventName="PreviewTextInput">
+                                                <ei:CallMethodAction TargetObject="{Binding}" MethodName="NumberValidationTextBox"/>
+                                            </i:EventTrigger>
+                                        </i:Interaction.Triggers>
+                                    </TextBox>
+
+                                    <Popup
+                                        x:Name="autoListPopup"
+                                        Width="230" MaxHeight="150"
+                                        Visibility="Collapsed"
+                                        StaysOpen="False"
+                                        Placement="Bottom">
+                                        <ListBox 
+                                            x:Name="autoList"
+                                            Background="White"
+                                            Visibility="Collapsed"
+                                            SelectionChanged="ListBox_SelectionChanged"/>
+                                    </Popup>
+                                </StackPanel>
 
                                 <!--Gender-->
                                 <TextBlock
@@ -102,7 +120,7 @@
                                     Margin="0,0,20,0" VerticalAlignment="Center"
                                     Text="Name" FontSize="16"/>
 
-                                <TextBox 
+                                <TextBox
                                     Grid.Row="2" Grid.Column="1"
                                     FontSize="14" Width="230" Margin="0,3,0,3"
                                     Style="{StaticResource MaterialDesignTextBox}"
@@ -172,7 +190,7 @@
                                     materialDesign:TextFieldAssist.HasClearButton="True"
                                     materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueMidBrush}"/>
 
-                                <Button 
+                                <Button
                                     Grid.Row="6" Grid.Column="4" Height="24" 
                                     Content="Be a sharer" Padding="3" FontSize="14"
                                     VerticalAlignment="Bottom"
