Update top service
Add Chart of revenue from services of each room type

--- a/HotelManagement/HotelManagement/Resources/MenuItem.xaml
+++ b/HotelManagement/HotelManagement/Resources/MenuItem.xaml
@@ -39,4 +39,7 @@
     <DataTemplate DataType="{x:Type viewModels:GuestChart}">
         <resUC:UC_GuestChart/>
     </DataTemplate>
+    <DataTemplate DataType="{x:Type viewModels:ServiceByRoomTypeViewModel}">
+        <views:ServiceByRoomTypeView/>
+    </DataTemplate>
 </ResourceDictionary>
