--- a/HotelManagement/HotelManagement/Views/Report/TopServiceView.xaml
+++ b/HotelManagement/HotelManagement/Views/Report/TopServiceView.xaml
@@ -18,8 +18,9 @@
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width=".5*"/>
-            <ColumnDefinition Width=".5*"/>
+            <ColumnDefinition Width=".37*"/>
+            <ColumnDefinition Width="0.5"/>
+            <ColumnDefinition Width=".63*"/>
         </Grid.ColumnDefinitions>
         <!-- Top service used -->
         <Grid Grid.Column="0" Margin="0 0 4 0">
@@ -34,7 +35,7 @@
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="Quantity" FontSize="22" FontWeight="Bold" VerticalAlignment="Center"
+                <TextBlock Grid.Column="0" Text="Top services used" FontSize="22" FontWeight="Bold" VerticalAlignment="Center"
                     HorizontalAlignment="Stretch" Margin="8 8 0 8" Foreground="{StaticResource PrimaryHueDarkBrush}"/>
                 <Grid Grid.Column="1">
                     <Grid.ColumnDefinitions>
@@ -146,7 +147,7 @@
                                                     <ColumnDefinition Width=".2*"/>
                                                     <ColumnDefinition Width=".15*"/>
                                                 </Grid.ColumnDefinitions>
-                                                <TextBlock Grid.Column="0" Text="{Binding Index}"
+                                                <TextBlock Grid.Column="0" Text="{Binding Index}" FontWeight="Bold"
                                                         HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                                 <TextBlock Grid.Column="1" Text="{Binding Id}"
                                                         HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -166,153 +167,10 @@
                 </Grid>
             </Border>
         </Grid>
+        <Border Grid.Column="1" Background="Black"/>
         <!-- Revenue of service -->
-        <Grid Grid.Column="1" Margin="4 0 0 0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <!-- Header -->
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="Revenue" FontSize="22" FontWeight="Bold" VerticalAlignment="Center"
-                    HorizontalAlignment="Stretch" Margin="8 8 0 8" Foreground="{StaticResource PrimaryHueDarkBrush}"/>
-                <Grid Grid.Column="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0.2*"/>
-                        <ColumnDefinition Width="0.8*"/>
-                    </Grid.ColumnDefinitions>
-                    <StackPanel Grid.Column="1" Margin="0 0 4 0" Orientation="Horizontal"
-                        VerticalAlignment="Center" HorizontalAlignment="Right">
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0 0 4 0">
-                            <TextBlock Text="Top:" Margin="4" VerticalAlignment="Center"/>
-                            <ComboBox x:Name="cbbTopRevenue" Padding="8 2 2 2" HorizontalAlignment="Right"
-                            BorderBrush="{StaticResource PrimaryHueDarkBrush}" Height="auto"
-                            ItemsSource="{Binding TopsRevenue}" SelectedItem="{Binding SelectedTopRevenue}"
-                            VerticalContentAlignment="Center" Width="52">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="SelectionChanged">
-                                        <i:InvokeCommandAction Command="{Binding ReloadRevenueCommand}" 
-                                   CommandParameter="{Binding ElementName=cbbTopRevenue}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
-                            </ComboBox>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
-                            <TextBlock Text="Time report:" Margin="4" VerticalAlignment="Center"/>
-                            <DatePicker Name="dpTimeReportRevenue" Width="auto" Margin="2 0 0 0"
-                            res:DatePickerCalendar.IsMonthYear="True"
-                            res:DatePickerDateFormat.DateFormat="MM/yyyy"
-                            SelectedDate="{Binding TimeReportRevenue}">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="SelectedDateChanged">
-                                        <i:InvokeCommandAction Command="{Binding ReloadRevenueCommand}" 
-                                   CommandParameter="{Binding ElementName=dpTimeReportRevenue}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
-                            </DatePicker>
-                        </StackPanel>
-                    </StackPanel>
-                    
-                </Grid>
-            </Grid>
-            <!-- Filter -->
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="auto"/>
-                </Grid.ColumnDefinitions>
-                <ComboBox x:Name="cbbModeRevenue" Padding="8 2 2 2" HorizontalAlignment="Right" Margin="4"
-                          Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                          Foreground="{StaticResource PrimaryHueDarkBrush}"
-                            BorderBrush="{StaticResource PrimaryHueDarkBrush}" Height="32"
-                            ItemsSource="{Binding ModesRevenue}" SelectedItem="{Binding SelectedModeRevenue}"
-                            VerticalContentAlignment="Center" Width="auto">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="SelectionChanged">
-                            <i:InvokeCommandAction Command="{Binding ReloadRevenueCommand}" 
-                                   CommandParameter="{Binding ElementName=cbbModeRevenue}"/>
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-                </ComboBox>
-            </Grid>
-            <Separator Grid.Row="2" Background="{StaticResource MaterialDesignDarkSeparatorBackground}" Margin="4 0 4 0"/>
-            <Border Grid.Row="3">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <!-- Columns header -->
-                    <Grid Grid.Row="0" Margin="4 8 4 8">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width=".08*"/>
-                            <ColumnDefinition Width=".1*"/>
-                            <ColumnDefinition Width=".47*"/>
-                            <ColumnDefinition Width=".17*"/>
-                            <ColumnDefinition Width=".18*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="No." FontWeight="Bold"
-                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Column="1" Text="ID" FontWeight="Bold"
-                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Column="2" Text="Service Name" FontWeight="Bold"
-                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Column="3" Text="Price" FontWeight="Bold"
-                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Column="4" Text="Revenue" FontWeight="Bold"
-                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Grid>
-                    <Separator Grid.Row="1" Background="{StaticResource MaterialDesignDarkSeparatorBackground}" Margin="8 1 8 1"/>
-                    <!-- List View -->
-                    <Grid Grid.Row="2" Name="gridRevenue">
-                        <ScrollViewer x:Name="scvServicesRevenue" VerticalScrollBarVisibility="Hidden" Margin="4 1 4 4" Grid.ColumnSpan="2">
-                            <ItemsControl ItemsSource="{Binding ServicesRevenue}" HorizontalAlignment="left" Margin="0 5">
-                                <ItemsControl.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <WrapPanel Orientation="Vertical"/>
-                                    </ItemsPanelTemplate>
-                                </ItemsControl.ItemsPanel>
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <materialDesign:Card HorizontalAlignment="Center"
-                                                Background="{DynamicResource PrimaryHueDarkBrush}"
-                                                Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}"
-                                                Width="{Binding ActualWidth, ElementName=gridRevenue}" 
-                                                Padding="5" Margin="2 0 2 1">
-                                            <Grid>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width=".08*"/>
-                                                    <ColumnDefinition Width=".1*"/>
-                                                    <ColumnDefinition Width=".47*"/>
-                                                    <ColumnDefinition Width=".17*"/>
-                                                    <ColumnDefinition Width=".18*"/>
-                                                </Grid.ColumnDefinitions>
-                                                <TextBlock Grid.Column="0" Text="{Binding Index}"
-                                                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                                <TextBlock Grid.Column="1" Text="{Binding Id}"
-                                                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                                <TextBlock Grid.Column="2" Text="{Binding Name}" TextTrimming="CharacterEllipsis"
-                                                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                                <TextBlock Grid.Column="3" Text="{Binding Price}"
-                                                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                                <TextBlock Grid.Column="4" Text="{Binding Revenue}"
-                                                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                            </Grid>
-                                        </materialDesign:Card>
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-                        </ScrollViewer>
-                    </Grid>
-                </Grid>
-            </Border>
+        <Grid Grid.Column="2" Margin="4 0 0 0">
+            <local:ServiceByRoomTypeView/>
         </Grid>
     </Grid>
 </UserControl>
