--- a/HotelManagement/HotelManagement/Views/AddRoomWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/AddRoomWindow.xaml
@@ -190,23 +190,21 @@
             <Grid Grid.Row="7">
                 <Button
                     x:Name="btnSave"
-                    Background="{x:Null}"
                     BorderThickness="1"
-                    BorderBrush="Gray"
+                    Background="{StaticResource PrimaryHueDarkBrush}"
                     Height="30"
                     Width="100"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Content="Save"
                     FontSize="13"
-                    Foreground="Gray"
                     Margin="0 0 150 0"
                     Command="{Binding SaveRoomCommand}"
                     CommandParameter="{Binding ElementName=wdAddRoom}">
                 </Button>
                 <Button
                     x:Name="btnCancel"
-                    Background="{x:Null}"
+                    Style="{StaticResource MaterialDesignOutlinedButton}"
                     BorderThickness="1"
                     BorderBrush="Gray"
                     Height="30"
@@ -215,7 +213,6 @@
                     VerticalAlignment="Center"
                     Content="Cancel"
                     FontSize="13"
-                    Foreground="Gray"
                     Margin="150 0 0 0"
                     Command="{Binding CloseCommand}"
                     CommandParameter="{Binding ElementName=wdAddRoom}">
