--- a/HotelManagement/HotelManagement/Views/AddTypeWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/AddTypeWindow.xaml
@@ -174,7 +174,6 @@
             <Grid Grid.Row="6">
                 <Button
                     x:Name="btnSave"
-                    Background="{x:Null}"
                     BorderThickness="1"
                     BorderBrush="Gray"
                     Height="30"
@@ -183,14 +182,13 @@
                     VerticalAlignment="Center"
                     Content="Save"
                     FontSize="13"
-                    Foreground="Gray"
                     Margin="0 0 150 0"
                     Command="{Binding SaveTypeCommand}"
                     CommandParameter="{Binding ElementName=wdAddType}">
                 </Button>
                 <Button
                     x:Name="btnCancel"
-                    Background="{x:Null}"
+                    Style="{StaticResource MaterialDesignOutlinedButton}"
                     BorderThickness="1"
                     BorderBrush="Gray"
                     Height="30"
@@ -199,7 +197,6 @@
                     VerticalAlignment="Center"
                     Content="Cancel"
                     FontSize="13"
-                    Foreground="Gray"
                     Margin="150 0 0 0"
                     Command="{Binding CloseCommand}"
                     CommandParameter="{Binding ElementName=wdAddType}">
